plugins {
    id 'com.android.application'
    id 'androidx.navigation.safeargs'
    //For firebase
    id 'com.google.gms.google-services'
    //For api keys
    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'

}
secrets {
    propertiesFileName = "secrets.properties"

    defaultPropertiesFileName = "local.defaults.properties"

    ignoreList.add("keyToIgnore") // Ignore the key "keyToIgnore"
    ignoreList.add("sdk.*")       // Ignore all keys matching the regexp "sdk.*"
}

android {
    namespace 'com.overmighties.pubber'
    compileSdk 34
    signingConfigs {
        release {
            storeFile file("keys/mykeystore.keystore")
            storePassword "h-63s5_.19tU"
            keyAlias "my-release-key"
            keyPassword "h-63s5_.19tU"
        }
    }
    defaultConfig {
        applicationId 'com.overmighties.pubber'
        minSdk 31
        targetSdk 33
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        resourceConfigurations += ["en", "b+pl+PL"]
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.release
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    buildFeatures {
        viewBinding true
        buildConfig true
    }
}
apply plugin: "androidx.navigation.safeargs"
dependencies {

    implementation "androidx.core:core-splashscreen:1.0.0"
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.12.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.lifecycle:lifecycle-livedata:2.5.1'//Can't upgrade version
    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.5.1'//Can't upgrade version
    implementation 'androidx.navigation:navigation-fragment:2.7.7'
    implementation 'androidx.navigation:navigation-ui:2.7.7'
    implementation 'org.slf4j:slf4j-simple:2.0.7'
    implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'

    //image view with ability to zooming
    implementation 'com.github.MikeOrtiz:TouchImageView:3.6'
    //added this constrains cause without them there is some weird bug, it just works now
    constraints {
        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
            because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
        }
        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0") {
            because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
        }
    }

    //Android Concurrent
    implementation "androidx.concurrent:concurrent-futures:1.1.0"

    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.11'
    implementation 'androidx.viewpager2:viewpager2:1.1.0'

    implementation 'com.makeramen:roundedimageview:2.3.0'

    //Firebase
    implementation(platform("com.google.firebase:firebase-bom:33.0.0"))
    implementation "com.google.firebase:firebase-auth"
    //Credentials
    implementation "androidx.credentials:credentials:1.3.0-beta01"
    implementation "androidx.credentials:credentials-play-services-auth:1.3.0-beta01"
    implementation 'com.google.android.libraries.identity.googleid:googleid:1.1.0'
    implementation "com.google.android.gms:play-services-auth:21.2.0"

    //Android Concurrent
    implementation "androidx.concurrent:concurrent-futures:1.1.0"

    //RxJava
    // (Java only)
    implementation "androidx.work:work-runtime:2.9.0"
    implementation "androidx.work:work-multiprocess:2.9.0"

    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
    implementation 'io.reactivex.rxjava3:rxjava:3.1.8'
    implementation "androidx.lifecycle:lifecycle-reactivestreams:2.5.1"//Can't upgrade version

    //Room
    def room_version = "2.6.1"
    implementation "androidx.room:room-runtime:$room_version"
    annotationProcessor "androidx.room:room-compiler:$room_version"
    implementation "androidx.room:room-rxjava3:$room_version"

    //DataStore
    implementation "androidx.datastore:datastore-preferences-rxjava3:1.1.1"
    implementation "androidx.datastore:datastore-rxjava3:1.1.1"//proto

    //Lombok to shortening code
    compileOnly 'org.projectlombok:lombok:1.18.28'
    annotationProcessor 'org.projectlombok:lombok:1.18.28'
    testCompileOnly 'org.projectlombok:lombok:1.18.28'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'

    //Glide image loader
    implementation 'com.github.bumptech.glide:glide:4.16.0'
    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.22'

    // Jetpack Annotations
    implementation 'androidx.annotation:annotation:1.8.0'

    //Google location
    implementation 'com.google.maps:google-maps-services:2.2.0'
    implementation 'com.google.android.gms:play-services-location:21.3.0'

    //sunrise calculator
    implementation 'com.luckycatlabs:SunriseSunsetCalculator:1.2'

    // Maps SDK for Android
    implementation 'com.google.android.gms:play-services-maps:19.0.0'




}
